# parallel-for-macro

./: Cargo.toml  README.md
src/: lib.rs
tests/: run.rs
tests/compile-fail/: break.rs  continue.rs  return.rs
tests/run-pass/: test.rs
